--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-868.3KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.00MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-157.7KB/s(Youtube:不良林), server: ray.johnnyz.gq, port: 35517, type: vmess, uuid: 28738aa8-ec2a-43f2-cf87-ec4a7b44dfcf, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zghuwin/, ws-headers: {Host: ray.johnnyz.gq}}
+  - {name: 🇫🇷 法国-667.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.40MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
