--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-157.7KB/s(Youtube:不良林), server: ray.johnnyz.gq, port: 35517, type: vmess, uuid: 28738aa8-ec2a-43f2-cf87-ec4a7b44dfcf, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zghuwin/, ws-headers: {Host: ray.johnnyz.gq}}
+  - {name: 🇨🇦 加拿大-848.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-420.5KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇫🇷 法国-667.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-2.40MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.60MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 64.112.42.73, port: 443, type: vmess, uuid: 4946f776-0af3-49f3-acad-d157475d253e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /P0S5U7NK, ws-headers: {Host: 64.112.42.73}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
       - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
 rules:
