--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-848.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-420.5KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-667.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.60MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.35MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇮🇹 意大利-679.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1010.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-335.8KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-877.5KB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 64.112.42.73, port: 443, type: vmess, uuid: 4946f776-0af3-49f3-acad-d157475d253e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /P0S5U7NK, ws-headers: {Host: 64.112.42.73}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-420.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-667.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
