--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.35MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇮🇹 意大利-679.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-883.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇩🇪 德国-257.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1010.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-335.8KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-877.5KB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 64.112.42.73, port: 443, type: vmess, uuid: 4946f776-0af3-49f3-acad-d157475d253e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /P0S5U7NK, ws-headers: {Host: 64.112.42.73}}
+  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-474.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.35MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-679.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-883.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-474.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
